syntax = "proto3";

package link;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/batazor/shortlink/internal/services/link/domain/link";

message Link {
    // URL
    string url = 1;
    // Hash by URL + salt
    string hash = 2;
    // Describe of link
    string describe = 3;

    // Create at
    google.protobuf.Timestamp created_at = 4;
    // Update at
    google.protobuf.Timestamp updated_at = 5;
}

message Links {
    repeated Link link = 1;
}
